# QAC020X328K

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  functionsMain.py  pyproject.toml  requirements.txt  testing-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: push_all_branches.yaml  push_master.yaml  python-app.yml
Static/js/: main.a22b915d.js  main.a22b915d.js.LICENSE.txt  main.a22b915d.js.map
Templates/: 404.html
Videos/: README.md
app/: ApiModels.py  functionsMain.py  main.py  test_auth.py  test_client.py
app/Static/css/: main.c57aeb08.css.map
app/Static/js/: main.9a755dde.js
app/Templates/: 404.html  index.html
app/modules/: ApiModels.py  functionsMain.py
app/static/css/: main.c57aeb08.css
app/static/js/: main.36996c5c.js  main.36996c5c.js.map  main.4a7c9c9e.js  main.4a7c9c9e.js.map  main.4b5bcd8c.js  main.4b5bcd8c.js.map  main.59c5c0fa.js  main.59c5c0fa.js.map  main.6384e4bc.js  main.6384e4bc.js.LICENSE.txt  main.6384e4bc.js.map  main.7053d742.js  main.7053d742.js.map  main.9a755dde.js.map
app/static/ssl/: localhost.crt  localhost.decrypted.key
app/tests/: _test_database.sql  response_schemas.py  test_admin.py  test_api_endpoints.py  test_auth.py  test_client.py  test_tickets.py
nginx/: default.conf
