[tool.poetry]
name = "app"
version = "0.0.1"
description = "QA Software engineer and Agile"
authors = ["Daniel Thompson"]

[tool.poetry.dependencies]
python = "^3.10.4"
uvicorn = "0.22.0"
fastapi = "0.95.2"
python-multipart = "0.0.6"
pydantic = {extras = ["email"], version = "1.10.8"}
Jinja2 = "3.1.2"
gunicorn = "20.1.0"
pyjwt = "2.7.0"
mysql-connector-python = "8.0.33"
