[tool.poetry]
name = "app"
version = "0.0.1"
description = "QA Software engineer and Agile"
authors = ["Daniel Thompson"]

[tool.poetry.dependencies]
python = "^3.10.4"
uvicorn = "0.22.0"
fastapi = "0.98.0"
python-multipart = "0.0.6"
pydantic = {extras = ["email"], version = "1.10.9"}
Jinja2 = "3.1.2"
gunicorn = "20.1.0"
pyjwt = "2.7.0"
mysql-connector-python = "8.0.33"


[tool.flake8]
extend-ignore = """
        E501,
        E401,
        E722,
        F403,
        E225,
        F405,
        E402
    """
exclude = ['static', '__pycache__', '__init__.py', '*.sql', '-pytest_cache']
max-complexity = 10

[tool.coverage.run]
omit = [
    "*/__pycache__/*",
    "__init__.py",
    "*/tests/*"
    ]

[tool.coverage.report]
omit = [
    "*/__pycache__/*",
    "__init__.py",
    "*/tests/*"
    ]